--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "prismjs": "^1.17.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-flickr-hero": "^1.4.0",
+    "react-fontawesome": "^1.6.1",
     "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
     "styled-components": "^4.3.2",
