--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "^2.13.39",
+    "gatsby-cli": "^2.7.27",
     "gatsby-image": "^2.2.6",
     "gatsby-plugin-feed": "^2.3.5",
     "gatsby-plugin-google-analytics": "^2.1.4",
@@ -27,6 +28,7 @@
     "gatsby-source-filesystem": "^2.1.6",
     "gatsby-transformer-remark": "^2.6.9",
     "gatsby-transformer-sharp": "^2.2.4",
+    "grid-styled": "^5.0.2",
     "prismjs": "^1.17.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -34,6 +36,7 @@
     "react-fontawesome": "^1.6.1",
     "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
+    "scroll-to-element": "^2.0.3",
     "styled-components": "^4.3.2",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75",
