--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-typist": "^2.0.5",
     "react-typography": "^0.16.19",
     "scroll-to-element": "^2.0.3",
+    "sharp": "^0.23.1",
     "styled-components": "^4.3.2",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75",
